--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -96,3 +96,34 @@ jobs:
             ${{ runner.os }}-v1-
             ${{ runner.os }}
       - run: yarn test:unit --passWithNoTests
+
+  build:
+    runs-on: ubuntu-latest
+    needs:
+      - check-types
+      - lint
+      - unit-test
+    if: github.ref == 'refs/heads/master'
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12.x
+      - name: Restore dependencies
+        uses: actions/cache@v2
+        with:
+          key: ${{ runner.os }}-v1-${{ hashFiles('yarn.lock') }}
+          path: |
+            ~/.cache/yarn
+            node_modules
+          restore-keys: |
+            ${{ runner.os }}-v1-
+            ${{ runner.os }}
+      - name: Build
+        run: yarn build
+      - name: Upload
+        uses: actions/upload-artifact@v1
+        with:
+          name: app
+          path: dist
